# MktPrediction

./: .cursorignore  .gitignore  .mcp.json  CLAUDE.md  DEPLOY.md  README.md  README1.md  SETUP.md  aikit.json  example_query.md  package.json
.claude/: settings.local.json
.claude/agents/: typescript-react-agent.md
.claude/commands/: 07_generate_initial_data_models.md  08_generate_system_design.md  09_adk_generate_build_order.md  agent_orchestrator.md  cleanup.md  generate_diagram.md  pr_review.md  task_template.md  update_template_workflow.md
.cursor/: mcp.json
.cursor/rules/: avoid-any-type.mdc  (+24 more)
apps/market-signal-agent/: .env.example  .env.prod  pyproject.toml  requirements.txt
apps/market-signal-agent/logs/: deployment_metadata.json
apps/market-signal-agent/market_signal_agent/: __init__.py  agent.py  callbacks.py  config.py
apps/market-signal-agent/market_signal_agent/sub_agents/: __init__.py  parallel_data_agent.py  sequential_analysis_agent.py
apps/market-signal-agent/market_signal_agent/sub_agents/alert_agent/: __init__.py  agent.py
apps/market-signal-agent/market_signal_agent/sub_agents/event_calendar_agent/: __init__.py  agent.py
apps/market-signal-agent/market_signal_agent/sub_agents/initializer_agent/: __init__.py  agent.py
apps/market-signal-agent/market_signal_agent/sub_agents/persistence_agent/: __init__.py  agent.py
apps/market-signal-agent/market_signal_agent/sub_agents/speech_signal_agent/: __init__.py  agent.py
apps/market-signal-agent/market_signal_agent/sub_agents/synthesis_agent/: __init__.py  agent.py
apps/market-signal-agent/market_signal_agent/sub_agents/technical_agent/: __init__.py  agent.py
apps/market-signal-agent/market_signal_agent/tools/: __init__.py  alert_tools.py  bigquery_tools.py  forecast_tools.py  session_tools.py
apps/market-signal-agent/market_signal_agent/utils/: __init__.py
apps/market-signal-agent/scripts/: adk_web_with_logging.py  agent_engine_app.py  create_tables.py  create_views.py  deploy_cloud_function.py  load_tables.py  process_transcripts.py  run_adk_api.py  test_agent.py  verify_data.py
scripts/: read_env.py  update-helpers.py
(+279 files in other folders)
