[project]
name = "market-signal-agent"
version = "0.1.0"
description = "Market Volatility Prediction Agent using Google ADK with 8 Signal Agents"
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Market Signal Team"},
]
dependencies = [
    # Core ADK dependencies
    "google-adk>=1.14.1",
    "google-genai>=1.24.0",
    # BigQuery integration
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-bigquery-storage>=2.0.0",
    "db-dtypes>=1.0.0",
    # Cloud Storage (for data files)
    "google-cloud-storage>=2.18.0",
    # Core Python dependencies
    "pydantic>=2.11.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.1.0",
    # Web requests
    "httpx>=0.27.0",
    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    # Database connectivity for session service
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    # Agent Engine deployment
    "google-cloud-aiplatform[adk,agent_engines]>=1.95.1",
    "google-cloud-iam>=2.20.0",
    "google-cloud-resource-manager>=1.15.0",
    "asyncpg>=0.31.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=25.1.0",
    "ruff>=0.12.0",
    "mypy>=1.16.0",
    "python-dotenv[cli]>=1.1.1",
]
test = [
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["market_signal_agent"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "B904", # Exception chaining
]
ignore = [
    "E203", # whitespace before : (conflicts with black)
    "E501", # line too long (handled by black)
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
